; ModuleID = '/home/carl/AnghaBench/8cc/extr_cpp.c_add_hide_set.c'
source_filename = "/home/carl/AnghaBench/8cc/extr_cpp.c_add_hide_set.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32*, i32*)* @add_hide_set to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @add_hide_set(i32* %0, i32* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct.TYPE_4__*, align 8
  store i32* %0, i32** %3, align 8
  store i32* %1, i32** %4, align 8
  %8 = call i32* (...) @make_vector()
  store i32* %8, i32** %5, align 8
  store i32 0, i32* %6, align 4
  br label %9

9:                                                ; preds = %29, %2
  %10 = load i32, i32* %6, align 4
  %11 = load i32*, i32** %3, align 8
  %12 = call i32 @vec_len(i32* %11)
  %13 = icmp slt i32 %10, %12
  br i1 %13, label %14, label %32

14:                                               ; preds = %9
  %15 = load i32*, i32** %3, align 8
  %16 = load i32, i32* %6, align 4
  %17 = call i32 @vec_get(i32* %15, i32 %16)
  %18 = call %struct.TYPE_4__* @copy_token(i32 %17)
  store %struct.TYPE_4__* %18, %struct.TYPE_4__** %7, align 8
  %19 = load %struct.TYPE_4__*, %struct.TYPE_4__** %7, align 8
  %20 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %19, i32 0, i32 0
  %21 = load i32, i32* %20, align 4
  %22 = load i32*, i32** %4, align 8
  %23 = call i32 @set_union(i32 %21, i32* %22)
  %24 = load %struct.TYPE_4__*, %struct.TYPE_4__** %7, align 8
  %25 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %24, i32 0, i32 0
  store i32 %23, i32* %25, align 4
  %26 = load i32*, i32** %5, align 8
  %27 = load %struct.TYPE_4__*, %struct.TYPE_4__** %7, align 8
  %28 = call i32 @vec_push(i32* %26, %struct.TYPE_4__* %27)
  br label %29

29:                                               ; preds = %14
  %30 = load i32, i32* %6, align 4
  %31 = add nsw i32 %30, 1
  store i32 %31, i32* %6, align 4
  br label %9

32:                                               ; preds = %9
  %33 = load i32*, i32** %5, align 8
  ret i32* %33
}

declare dso_local i32* @make_vector(...) #1

declare dso_local i32 @vec_len(i32*) #1

declare dso_local %struct.TYPE_4__* @copy_token(i32) #1

declare dso_local i32 @vec_get(i32*, i32) #1

declare dso_local i32 @set_union(i32, i32*) #1

declare dso_local i32 @vec_push(i32*, %struct.TYPE_4__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
